--- a/web_static/styles/103-common.css
+++ b/web_static/styles/103-common.css
@@ -25,7 +25,7 @@ html {
 body {
 	font-size: 14px;
 	font-family: Circular,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  width: 100vw;
+  width: 100%;
   color: #484848;
   display: flex;
   flex-direction: column;
